gccida/c0/init_timevar
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_timevar/src/timevar.c:708:37: error: use of undeclared identifier 'off_896C37'
timevars[14].name = ( const char *)&off_896C37; 
                                    ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_timevar/src/timevar.c:709:37: error: use of undeclared identifier 'unk_896C30'
timevars[15].name = ( const char *)&unk_896C30; 
                                    ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/init_timevar/src/obj/timevar.o] Error 1
